// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly with children 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 bg-background border-2 border-foreground hover:border-rose-500 h-[60px] p-3"
  >
    Button
  </button>
</div>
`;

exports[`Button > renders correctly with custom className 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 bg-background border-2 border-foreground hover:border-rose-500 h-[60px] p-3 custom-class"
  />
</div>
`;

exports[`Button > renders correctly with default props 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 bg-background border-2 border-foreground hover:border-rose-500 h-[60px] p-3"
  />
</div>
`;

exports[`Button > renders correctly with disabled prop 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 bg-background border-2 border-foreground hover:border-rose-500 h-[60px] p-3"
    disabled=""
  />
</div>
`;

exports[`Button > renders correctly with size 'icon' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 bg-background border-2 border-foreground hover:border-rose-500 rounded px-1 py-2 h-[40px] w-[40px]"
  />
</div>
`;

exports[`Button > renders correctly with size 'small' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 bg-background border-2 border-foreground hover:border-rose-500 h-[40px] p-2"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 text-gray-500 hover:text-white hover:bg-foreground h-[60px] p-3"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost' and size 'icon' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 text-gray-500 hover:text-white hover:bg-foreground rounded px-1 py-2 h-[40px] w-[40px]"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost' and size 'small' 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 text-gray-500 hover:text-white hover:bg-foreground h-[40px] p-2"
  />
</div>
`;

exports[`Button > renders correctly with variant 'ghost', size 'default', and disabled 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg font-semibold transition-all focus-visible:outline-none focus-visible:ring-foreground focus-visible:ring-2 disabled:pointer-events-none disabled:opacity-50 ease-out-circ text-nowrap gap-2 text-gray-500 hover:text-white hover:bg-foreground h-[60px] p-3"
    disabled=""
  />
</div>
`;
